[package]
name = "wgpucheck"
version = "0.1.0"
edition = "2024"
description = """
  wgpucheck is a CLI tool, that will show you information about your system's GPU, and its compute capabilities.
"""
publish = false

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
env_logger = "0.11.8"
pollster = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
wgpu = { version = "25.0.2", features = ["serde"] }
